# faha

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/faha/: _types.py  app.py  league.py  players.py  request.py  value.py  weights.py  yahoo.py
src/faha/data/: keepers_2023.txt
src/faha/draft/: web.py
src/faha/league/: info.py
src/faha/managers/: managers.py
src/faha/oauth/: client.py
src/faha/utils/: json_io.py  string_io.py
tests/: test_oauth.py
