
[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faha"
version = "0.0.1"
authors = [{ name = "David Deepwell", email = "dsdeepwell@gmail.com" }]
description = "Fantasy Hockey Analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yahoo_oauth>=2.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "flake8>=7.0",
    "flake8-docstrings>=1.7",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "pylint>=3.0",
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"faha" = ["py.typed"]

[project.scripts]
initialize_tokens = "faha.oauth.client:initialize_keys"
get_league_info = "faha.league.info:extract_and_save_league_info"
input_league_id = "faha.league.info:input_league_id"
