[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=69.0" ]

[project]
name = "faha"
version = "0.0.1"
description = "Fantasy Hockey Analysis."
readme = "README.md"
authors = [ { name = "David Deepwell", email = "dsdeepwell@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "glom>=23.4.0",
  "yahoo-oauth>=2.0",
]
optional-dependencies.dev = [
  "flake8>=7.0",
  "flake8-docstrings>=1.7",
  "mypy>=1.8",
  "pre-commit>=3.6",
  "pylint>=3.0",
  "pytest>=7.4",
]
scripts.get_league_info = "faha.league:extract_and_save_league_info"
scripts.initialize_tokens = "faha.oauth.client:initialize_keys"
scripts.input_league_id = "faha.league:input_league_id"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
"faha" = [ "py.typed" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
